--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,7 @@
                     {% endif %}
                     {% if site.github_username %}
                     <li>
-                        <a target="_blank" href="https://github.com/{{ site.github_username }}">
+                        <a target="_blank" href="https://github.com/fsoooo">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -96,7 +96,7 @@
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user={{ site.github_username }}&repo={{ site.github_username }}.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=fsoooo&repo=fsoooo.github.io&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
