--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -8,7 +8,7 @@
 body {
 	.sans-serif;
 	font-size: 16px;
-	// Hux mpdify to 16px (Mobile First), and increase to 20px while 768+ width
+	// fsoooo mpdify to 16px (Mobile First), and increase to 20px while 768+ width
 	color: @gray-dark;
 	//-webkit-user-select:text; //对于 Blog 还是先不开启这句。
 	overflow-x : hidden;
@@ -79,7 +79,7 @@ img.shadow{
 }
 // Utils Style End
 
-// Select 
+// Select
 select{
 	-webkit-appearance:none;
 	margin-top:15px;
@@ -105,7 +105,7 @@ hr.small {
 	border-width: 4px;
 	border-color: white;
 }
-// add by Hux
+// add by fsoooo
 pre,.table-responsive{
 	// sometimes you should use vendor-feature.
 	-webkit-overflow-scrolling: touch;
@@ -182,7 +182,7 @@ pre code{
 			margin-top: 20px;
 		}
 	}
-	// V1.6 Hux display title by default.
+	// V1.6 fsoooo display title by default.
 	.pager li{
 		width: 48%;
 		&.next{ float: right};
@@ -210,7 +210,7 @@ pre code{
 	 * which would cover tags. A absolute positioning make a new layer.
 	 */
 	.navbar-default .navbar-collapse{
-		position: absolute; 
+		position: absolute;
      	right: 0;
 		border: none;
 		background: white;
@@ -221,9 +221,9 @@ pre code{
 	}
 	/**
 	 * Animation
-	 * HuxBlog-Navbar using genuine Material Design Animation
+	 * fsooooBlog-Navbar using genuine Material Design Animation
 	 */
-	#huxblog_navbar{ 	
+	#fsooooblog_navbar{
 		/**
 		 * Sharable code and 'out' function
 		 */
@@ -402,7 +402,7 @@ pre code{
 	background-attachment: scroll;
 	.background-cover;
 	// NOTE: Background images are set within the HTML using inline CSS!
-	margin-bottom: 0px;  /* 0 on mobile, modify by Hux */
+	margin-bottom: 0px;  /* 0 on mobile, modify by fsoooo */
 	@media only screen and (min-width: 768px) {
 		margin-bottom: 20px;  /* response on desktop */
 	}
@@ -541,7 +541,7 @@ pre code{
 	}
 }
 
-// Hux add home-page post-content-preview
+// fsoooo add home-page post-content-preview
 .post-content-preview{
     font-size: 13px;
     font-style: italic;
@@ -757,7 +757,7 @@ img::-moz-selection {
 }
 
 
-/* Hux add tags support */
+/* fsoooo add tags support */
 .tags{
 	margin-bottom: -5px;
 	a,.tag{
@@ -884,7 +884,7 @@ img::-moz-selection {
 
 /* Tags support End*/
 
-/* Hux make all img responsible in post-container */
+/* fsoooo make all img responsible in post-container */
 .post-container img{
 	display: block;
 	max-width: 100%;
@@ -893,7 +893,7 @@ img::-moz-selection {
 }
 
 
-/* Hux Optimize UserExperience */
+/* fsoooo Optimize UserExperience */
 .navbar-default .navbar-toggle {
 	&:focus, &:hover{
 		background-color: inherit;
@@ -903,7 +903,7 @@ img::-moz-selection {
   	}
 }
 
-/* Hux customize Style for navBar button */
+/* fsoooo customize Style for navBar button */
 
 .navbar-default .navbar-toggle{
 	border-color: transparent;
@@ -924,7 +924,7 @@ img::-moz-selection {
 }
 
 
-/* Hux customize Style for Duoshuo */
+/* fsoooo customize Style for Duoshuo */
 .comment{
 	margin-top: 20px;
 	#ds-thread {
@@ -975,7 +975,7 @@ img::-moz-selection {
 }
 
 
-// Hux fullscreen mode in 404.html
+// fsoooo fullscreen mode in 404.html
 
 .page-fullscreen .intro-header{
 	position: fixed;
