--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -130,7 +130,7 @@
   }
 }
 body {
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -149,7 +149,7 @@ h3,
 h4,
 h5,
 h6 {
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -331,9 +331,9 @@ pre code {
   }
   /**
 	 * Animation
-	 * HuxBlog-Navbar using genuine Material Design Animation
+	 * fsooooBlog-Navbar using genuine Material Design Animation
 	 */
-  #huxblog_navbar {
+  #fsooooblog_navbar {
     /**
 		 * Sharable code and 'out' function
 		 */
@@ -348,11 +348,11 @@ pre code {
 		 *'In' Animation
 		 */
   }
-  #huxblog_navbar a {
+  #fsooooblog_navbar a {
     font-size: 13px;
     line-height: 28px;
   }
-  #huxblog_navbar .navbar-collapse {
+  #fsooooblog_navbar .navbar-collapse {
     height: 0px;
     transform: scaleY(0);
     transform-origin: top right;
@@ -361,25 +361,25 @@ pre code {
     -webkit-transform-origin: top right;
     -webkit-transition: -webkit-transform 400ms cubic-bezier(0.32, 1, 0.23, 1) 0ms;
   }
-  #huxblog_navbar li {
+  #fsooooblog_navbar li {
     opacity: 0;
     transition: opacity 100ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     -webkit-transition: opacity 100ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   }
-  #huxblog_navbar.in {
+  #fsooooblog_navbar.in {
     transform: scaleX(1);
     -webkit-transform: scaleX(1);
     opacity: 1;
     transition: all 250ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     -webkit-transition: all 250ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   }
-  #huxblog_navbar.in .navbar-collapse {
+  #fsooooblog_navbar.in .navbar-collapse {
     transform: scaleY(1);
     -webkit-transform: scaleY(1);
     transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
     -webkit-transition: -webkit-transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
   }
-  #huxblog_navbar.in li {
+  #fsooooblog_navbar.in li {
     opacity: 1;
     transition: opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 205ms;
     -webkit-transition: opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 205ms;
@@ -393,7 +393,7 @@ pre code {
   left: 0;
   width: 100%;
   z-index: 3;
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -504,7 +504,7 @@ pre code {
   background-size: cover;
   -o-background-size: cover;
   margin-bottom: 0px;
-  /* 0 on mobile, modify by Hux */
+  /* 0 on mobile, modify by fsoooo */
 }
 @media only screen and (min-width: 768px) {
   .intro-header {
@@ -544,7 +544,7 @@ pre code {
 }
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading {
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -572,7 +572,7 @@ pre code {
   display: block;
 }
 .intro-header .post-heading .subheading {
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -753,7 +753,7 @@ form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
 }
 .btn {
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -782,7 +782,7 @@ form .row:first-child .floating-label-form-group {
 }
 .pager li > a,
 .pager li > span {
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -842,7 +842,7 @@ img::-moz-selection {
   color: white;
   background: transparent;
 }
-/* Hux add tags support */
+/* fsoooo add tags support */
 .tags {
   margin-bottom: -5px;
 }
@@ -931,7 +931,7 @@ img::-moz-selection {
 }
 .one-tag-list .tag-text {
   font-weight: 200;
-  /* Hux learn from
+  /* fsoooo learn from
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
@@ -973,14 +973,14 @@ img::-moz-selection {
   }
 }
 /* Tags support End*/
-/* Hux make all img responsible in post-container */
+/* fsoooo make all img responsible in post-container */
 .post-container img {
   display: block;
   max-width: 100%;
   height: auto;
   margin: 1.5em auto 1.6em auto;
 }
-/* Hux Optimize UserExperience */
+/* fsoooo Optimize UserExperience */
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
   background-color: inherit;
@@ -988,7 +988,7 @@ img::-moz-selection {
 .navbar-default .navbar-toggle:active {
   background-color: rgba(255, 255, 255, 0.25);
 }
-/* Hux customize Style for navBar button */
+/* fsoooo customize Style for navBar button */
 .navbar-default .navbar-toggle {
   border-color: transparent;
   padding: 19px 16px;
@@ -1005,7 +1005,7 @@ img::-moz-selection {
 .navbar-default .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 3px;
 }
-/* Hux customize Style for Duoshuo */
+/* fsoooo customize Style for Duoshuo */
 .comment {
   margin-top: 20px;
 }
